{
  "version": 4,
  "terraform_version": "1.3.4",
  "serial": 314,
  "lineage": "64cefc25-2008-b022-1903-bb20002ae04a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0daca9130ce2884e5",
            "association_id": "eipassoc-0bb34de5e53ba7821",
            "domain": "vpc",
            "id": "eipalloc-0daca9130ce2884e5",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0022bad66bf145397",
            "private_dns": "ip-10-32-2-239.ec2.internal",
            "private_ip": "10.32.2.239",
            "public_dns": "ec2-100-24-247-126.compute-1.amazonaws.com",
            "public_ip": "100.24.247.126",
            "public_ipv4_pool": "amazon",
            "tags_all": {
              "Name": "car-auction"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gateway",
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-092c4301b8b706d39",
            "association_id": "eipassoc-0a3a98d9245f7935b",
            "domain": "vpc",
            "id": "eipalloc-092c4301b8b706d39",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0cc367738efcf713b",
            "private_dns": "ip-10-32-3-128.ec2.internal",
            "private_ip": "10.32.3.128",
            "public_dns": "ec2-54-92-169-47.compute-1.amazonaws.com",
            "public_ip": "54.92.169.47",
            "public_ipv4_pool": "amazon",
            "tags_all": {
              "Name": "car-auction"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gateway",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:460344118489:internet-gateway/igw-08a20812350a1432f",
            "id": "igw-08a20812350a1432f",
            "owner_id": "460344118489",
            "tags_all": {
              "Name": "car-auction"
            },
            "vpc_id": "vpc-03505693b58a05433"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:460344118489:loadbalancer/app/car-auction-lb/86c8efccf17d9783",
            "arn_suffix": "app/car-auction-lb/86c8efccf17d9783",
            "desync_mitigation_mode": "defensive",
            "dns_name": "car-auction-lb-1478873541.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:460344118489:loadbalancer/app/car-auction-lb/86c8efccf17d9783",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "car-auction-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-06601905c8ff1048d"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0f1c56082df0e0d24"
              },
              {
                "subnet_id": "subnet-0f5a4ad84a7b39142"
              }
            ],
            "subnets": [
              "subnet-0f1c56082df0e0d24",
              "subnet-0f5a4ad84a7b39142"
            ],
            "tags_all": {
              "Name": "car-auction"
            },
            "vpc_id": "vpc-03505693b58a05433",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.lb",
            "aws_subnet.public",
            "aws_vpc.default",
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "car_auction",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:460344118489:listener/app/car-auction-lb/86c8efccf17d9783/526a072b542e9bea",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:460344118489:targetgroup/car-auction-target-group/ed10bb45851d01e9",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:460344118489:listener/app/car-auction-lb/86c8efccf17d9783/526a072b542e9bea",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:460344118489:loadbalancer/app/car-auction-lb/86c8efccf17d9783",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "Name": "car-auction"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.default",
            "aws_lb_target_group.car_auction",
            "aws_security_group.lb",
            "aws_subnet.public",
            "aws_vpc.default",
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "car_auction",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:460344118489:targetgroup/car-auction-target-group/ed10bb45851d01e9",
            "arn_suffix": "targetgroup/car-auction-target-group/ed10bb45851d01e9",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:460344118489:targetgroup/car-auction-target-group/ed10bb45851d01e9",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "car-auction-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "Name": "car-auction"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-03505693b58a05433"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0daca9130ce2884e5",
            "connectivity_type": "public",
            "id": "nat-0a5ffa8f95e4237a5",
            "network_interface_id": "eni-0022bad66bf145397",
            "private_ip": "10.32.2.239",
            "public_ip": "100.24.247.126",
            "subnet_id": "subnet-0f1c56082df0e0d24",
            "tags_all": {
              "Name": "car-auction"
            }
          },
          "dependencies": [
            "aws_eip.gateway",
            "aws_internet_gateway.gateway",
            "aws_subnet.public",
            "aws_vpc.default",
            "data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-092c4301b8b706d39",
            "connectivity_type": "public",
            "id": "nat-0b4fc80d22ec02400",
            "network_interface_id": "eni-0cc367738efcf713b",
            "private_ip": "10.32.3.128",
            "public_ip": "54.92.169.47",
            "subnet_id": "subnet-0f5a4ad84a7b39142",
            "tags_all": {
              "Name": "car-auction"
            }
          },
          "dependencies": [
            "aws_eip.gateway",
            "aws_internet_gateway.gateway",
            "aws_subnet.public",
            "aws_vpc.default",
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-08a20812350a1432f",
            "id": "r-rtb-0cabbf859e01a2eb21080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0cabbf859e01a2eb2",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gateway",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:460344118489:route-table/rtb-0663c5ab3da6f7be5",
            "id": "rtb-0663c5ab3da6f7be5",
            "owner_id": "460344118489",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a5ffa8f95e4237a5",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {
              "Name": "car-auction"
            },
            "timeouts": null,
            "vpc_id": "vpc-03505693b58a05433"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.gateway",
            "aws_internet_gateway.gateway",
            "aws_nat_gateway.gateway",
            "aws_subnet.public",
            "aws_vpc.default",
            "data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:460344118489:route-table/rtb-0169e04b631dd57c7",
            "id": "rtb-0169e04b631dd57c7",
            "owner_id": "460344118489",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b4fc80d22ec02400",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {
              "Name": "car-auction"
            },
            "timeouts": null,
            "vpc_id": "vpc-03505693b58a05433"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.gateway",
            "aws_internet_gateway.gateway",
            "aws_nat_gateway.gateway",
            "aws_subnet.public",
            "aws_vpc.default",
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-071c5bce1fe0dd157",
            "route_table_id": "rtb-0663c5ab3da6f7be5",
            "subnet_id": "subnet-02a9980907752939c"
          },
          "dependencies": [
            "aws_eip.gateway",
            "aws_internet_gateway.gateway",
            "aws_nat_gateway.gateway",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.default",
            "data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05474dd1570f4cb10",
            "route_table_id": "rtb-0169e04b631dd57c7",
            "subnet_id": "subnet-06ec702aa2398466d"
          },
          "dependencies": [
            "aws_eip.gateway",
            "aws_internet_gateway.gateway",
            "aws_nat_gateway.gateway",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.default",
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "car_auction_front_task",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:460344118489:security-group/sg-01f9997eedf915a61",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01f9997eedf915a61",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06601905c8ff1048d"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "car-auction-task-security-group",
            "name_prefix": "",
            "owner_id": "460344118489",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "Name": "car-auction"
            },
            "timeouts": null,
            "vpc_id": "vpc-03505693b58a05433"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lb",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:460344118489:security-group/sg-06601905c8ff1048d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06601905c8ff1048d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "car-auction-security-group",
            "name_prefix": "",
            "owner_id": "460344118489",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "Name": "car-auction"
            },
            "timeouts": null,
            "vpc_id": "vpc-03505693b58a05433"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:460344118489:subnet/subnet-02a9980907752939c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.32.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02a9980907752939c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "460344118489",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags_all": {
              "Name": "car-auction"
            },
            "vpc_id": "vpc-03505693b58a05433"
          },
          "dependencies": [
            "aws_vpc.default",
            "data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:460344118489:subnet/subnet-06ec702aa2398466d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.32.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06ec702aa2398466d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "460344118489",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags_all": {
              "Name": "car-auction"
            },
            "vpc_id": "vpc-03505693b58a05433"
          },
          "dependencies": [
            "aws_vpc.default",
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:460344118489:subnet/subnet-0f1c56082df0e0d24",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.32.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f1c56082df0e0d24",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "460344118489",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags_all": {
              "Name": "car-auction"
            },
            "vpc_id": "vpc-03505693b58a05433"
          },
          "dependencies": [
            "aws_vpc.default",
            "data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:460344118489:subnet/subnet-0f5a4ad84a7b39142",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.32.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f5a4ad84a7b39142",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "460344118489",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags_all": {
              "Name": "car-auction"
            },
            "vpc_id": "vpc-03505693b58a05433"
          },
          "dependencies": [
            "aws_vpc.default",
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:460344118489:vpc/vpc-03505693b58a05433",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.32.0.0/16",
            "default_network_acl_id": "acl-00f2a719f76d1ff8a",
            "default_route_table_id": "rtb-0cabbf859e01a2eb2",
            "default_security_group_id": "sg-0bc527bade381f8f5",
            "dhcp_options_id": "dopt-09025da9f64c722a5",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03505693b58a05433",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0cabbf859e01a2eb2",
            "owner_id": "460344118489",
            "tags_all": {
              "Name": "car-auction"
            }
          }
        }
      ]
    }
  ]
}